<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quran_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".QuranActivity">

    <!-- Top App Bar -->
    <RelativeLayout
        android:id="@+id/quran_top_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/cd_back_button"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <!-- Title -->
        <TextView
            android:id="@+id/tv_quran_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nav_book"
            android:textColor="@color/light_teal"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Content Area - Empty for now -->
    <TextView
        android:id="@+id/tv_quran_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quran_placeholder"
        android:textColor="@color/primary_teal"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quran_top_bar" />

    <!-- Fixed Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_nav_background_flat"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_nav_home"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:contentDescription="@string/cd_home_icon"
                android:src="@drawable/nav_home_selector"
                app:tint="@color/nav_icon_color" />

            <TextView
                android:id="@+id/tv_nav_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_home"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Qibla -->
        <LinearLayout
            android:id="@+id/nav_qibla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_nav_qibla"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:contentDescription="@string/cd_compass_icon"
                android:src="@drawable/nav_compass_selector"
                app:tint="@color/nav_icon_color" />

            <TextView
                android:id="@+id/tv_nav_qibla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_qibla"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Book -->
        <LinearLayout
            android:id="@+id/nav_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_nav_book"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:contentDescription="@string/cd_book_icon"
                android:src="@drawable/nav_book_selector"
                app:tint="@color/nav_icon_color" />

            <TextView
                android:id="@+id/tv_nav_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_book"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
